--- a/Travely.Client/Pages/ItineraryPage.xaml
+++ b/Travely.Client/Pages/ItineraryPage.xaml
@@ -46,6 +46,7 @@
                                             Grid.Column="1"
                                             Placeholder="{x:Static resources:ItineraryResources.AddPlace}" 
                                             IsReadOnly="True"
+                                            Text="{Binding Path=BindingContext.SpotName, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
                                             Margin="2,0,0,0"/>
 
                                         <ImageButton 
