--- a/Travely.Client/Pages/ItineraryPage.xaml
+++ b/Travely.Client/Pages/ItineraryPage.xaml
@@ -46,12 +46,13 @@
                                             Grid.Column="1"
                                             Placeholder="{x:Static resources:ItineraryResources.AddPlace}" 
                                             IsReadOnly="True"
-                                            Text="{Binding Path=BindingContext.SpotName, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
+                                            Text="{Binding Path=BindingContext.CurrentSpotName, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
                                             Margin="2,0,0,0"/>
 
                                         <ImageButton 
                                             Grid.Column="2" 
-                                            Command="{Binding AddSpotCommand}"
+                                            Command="{Binding Path=BindingContext.AddSpotCommand, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
+                                            CommandParameter="{Binding Key}"
                                             Source="save_location.png" 
                                             HorizontalOptions="End"
                                             WidthRequest="30" 
