--- a/Travely.Client/Pages/ItineraryPage.xaml
+++ b/Travely.Client/Pages/ItineraryPage.xaml
@@ -29,6 +29,13 @@
                 </HorizontalStackLayout>
             </Frame>
 
+            <Frame Margin="10" VerticalOptions="Center" HorizontalOptions="Center" WidthRequest="360">
+                <VerticalStackLayout >
+                    <Label Text="{x:Static resources:ItineraryResources.Budget}" FontSize="20" FontAttributes="Bold" Margin="0,20,0,0" VerticalOptions="Center" HorizontalOptions="Center" />
+                    <Label Text="500$" FontSize="20" FontAttributes="Bold" Margin="0,20,0,0" VerticalOptions="Center" HorizontalOptions="Center" />
+                </VerticalStackLayout>
+            </Frame>
+
             <StackLayout BindableLayout.ItemsSource="{Binding Itinerary}">
                 <BindableLayout.ItemTemplate>
                     <DataTemplate>
@@ -74,11 +81,25 @@
                                 <StackLayout BindableLayout.ItemsSource="{Binding Spots}">
                                     <BindableLayout.ItemTemplate>
                                         <DataTemplate>
-                                            <Frame BorderColor="Gray" CornerRadius="5" Padding="0" Margin="5" >
-                                                <Grid>
-                                                    <Image Source="map_color.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
-                                                    <Entry Text="{Binding}" Margin="28,0,28,0"/>
-                                                </Grid>
+                                            <Frame BorderColor="Gray" CornerRadius="5" Padding="0" Margin="5">
+                                                <StackLayout>
+                                                    <Grid ColumnDefinitions="Auto,*,Auto,Auto,Auto">
+                                                        <Image Grid.Column="1" Source="map_color.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                                                        <Entry Grid.Column="2" Text="{Binding}" Margin="28,0,150,0"/>
+                                                        <ImageButton  Grid.Column="3" Source="delete.png" HorizontalOptions="End" WidthRequest="30"  HeightRequest="20" Margin="20,0,5,0"/>
+
+                                                    </Grid>
+                                                    <Grid ColumnDefinitions="Auto,*,Auto,Auto,Auto">
+                                                        <Image Grid.Column="1" Source="time.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                                                        <Entry  Grid.Column="2" Text="Gojo" Margin="28,0,160,0"/>
+                                                        <ImageButton  Grid.Column="3" Source="save_btn.png" HorizontalOptions="End" WidthRequest="30"  HeightRequest="30" Margin="20,0,5,0"/>
+                                                    </Grid>
+                                                    <Grid ColumnDefinitions="Auto,*,Auto,Auto,Auto">
+                                                        <Image  Grid.Column="1" Source="money.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                                                        <Entry  Grid.Column="2" Text="Satoru" Margin="28,0,150,0"/>
+                                                        <ImageButton  Grid.Column="3" Source="save_btn.png" HorizontalOptions="End" WidthRequest="30"  HeightRequest="30" Margin="20,0,5,0"/>
+                                                    </Grid>
+                                                </StackLayout>
                                             </Frame>
                                         </DataTemplate>
                                     </BindableLayout.ItemTemplate>
