Added logic to update the entry fee

--- a/Travely.Client/Pages/ItineraryPage.xaml
+++ b/Travely.Client/Pages/ItineraryPage.xaml
@@ -85,19 +85,44 @@
                                                 <StackLayout>
                                                     <Grid ColumnDefinitions="Auto,*,Auto,Auto,Auto">
                                                         <Image Grid.Column="1" Source="map_color.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
-                                                        <Entry Grid.Column="2" Text="{Binding}" Margin="28,0,150,0"/>
-                                                        <ImageButton  Grid.Column="3" Source="delete.png" HorizontalOptions="End" WidthRequest="30"  HeightRequest="20" Margin="20,0,5,0"/>
-
+                                                        <Entry Grid.Column="2" Text="{Binding Name}" Margin="28,0,150,0"/>
+                                                        <ImageButton 
+                                                            Grid.Column="3" 
+                                                            Source="delete.png" 
+                                                            Command="{Binding Path=BindingContext.DeleteSpotCommand, Source={x:Reference parentStackLayout}}" 
+                                                            CommandParameter="{Binding .}"
+                                                            HorizontalOptions="End" 
+                                                            WidthRequest="30" 
+                                                            HeightRequest="20" 
+                                                            Margin="20,0,5,0"/>
                                                     </Grid>
+                                                    
                                                     <Grid ColumnDefinitions="Auto,*,Auto,Auto,Auto">
                                                         <Image Grid.Column="1" Source="time.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
                                                         <TimePicker Grid.Column="2" Margin="28,0,160,0" />
-                                                        <ImageButton  Grid.Column="3" Source="save_btn.png" HorizontalOptions="End" WidthRequest="30"  HeightRequest="30" Margin="20,0,5,0"/>
+                                                        <ImageButton 
+                                                            Grid.Column="3" 
+                                                            Source="save_btn.png" 
+                                                            Command="{Binding Path=BindingContext.UpdateSpotTimeCommand, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
+                                                            CommandParameter="{Binding .}"
+                                                            HorizontalOptions="End" 
+                                                            WidthRequest="30" 
+                                                            HeightRequest="30" 
+                                                            Margin="20,0,5,0"/>
                                                     </Grid>
+                                                    
                                                     <Grid ColumnDefinitions="Auto,*,Auto,Auto,Auto">
-                                                        <Image  Grid.Column="1" Source="money.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
-                                                        <Entry  Grid.Column="2" Text="Gojo Satoru" Margin="20,0,120,0"/>
-                                                        <ImageButton  Grid.Column="3" Source="save_btn.png" HorizontalOptions="End" WidthRequest="30"  HeightRequest="30" Margin="20,0,5,0"/>
+                                                        <Image Grid.Column="1" Source="money.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                                                        <Entry Grid.Column="2" Text="{Binding EntryFee}" Margin="20,0,120,0"/>
+                                                        <ImageButton 
+                                                            Grid.Column="3" 
+                                                            Source="save_btn.png" 
+                                                            Command="{Binding Path=BindingContext.UpdateSpotFeeCommand, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
+                                                            CommandParameter="{Binding .}"
+                                                            HorizontalOptions="End"
+                                                            WidthRequest="30"
+                                                            HeightRequest="30"
+                                                            Margin="20,0,5,0"/>
                                                     </Grid>
                                                 </StackLayout>
                                             </Frame>
