--- a/Travely.Client/Pages/ItineraryPage.xaml
+++ b/Travely.Client/Pages/ItineraryPage.xaml
@@ -89,7 +89,7 @@
                                                         <ImageButton 
                                                             Grid.Column="3" 
                                                             Source="delete.png" 
-                                                            Command="{Binding Path=BindingContext.DeleteSpotCommand, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
+                                                            Clicked="ConfirmDeleteSpot"
                                                             CommandParameter="{Binding .}"
                                                             HorizontalOptions="End" 
                                                             WidthRequest="30" 
