--- a/Travely.Client/Pages/MapPage.xaml
+++ b/Travely.Client/Pages/MapPage.xaml
@@ -6,11 +6,15 @@
              Title="MapPage">
     <StackLayout>
         <StackLayout Orientation="Horizontal" Padding="10">
-            <Entry x:Name="searchEntry" Placeholder="Search location" HorizontalOptions="FillAndExpand"/>
+            <Entry 
+                x:Name="searchEntry" 
+                Placeholder="Search location"
+                Focused="OnSearchEntryFocused"
+                HorizontalOptions="FillAndExpand"/>
             <ImageButton Source="loop.png" WidthRequest="30" HeightRequest="30" Margin="0,0,10,0"/>
         </StackLayout>
         <maps:Map 
-        x:Name="map" 
-        MapClicked="PinLocationOnMap"/>
+            x:Name="map" 
+            MapClicked="PinLocationOnMap"/>
     </StackLayout>
 </ContentPage>
